[gd_scene load_steps=10 format=3 uid="uid://dg4jr1g2aaru1"]

[ext_resource type="Script" uid="uid://pbopxreve75n" path="res://scripts/fase_3_2.gd" id="1_ev2hf"]
[ext_resource type="Texture2D" uid="uid://d4fb34s5wwsfu" path="res://assets/backgrounds/background.png" id="2_i87bx"]
[ext_resource type="Texture2D" uid="uid://d8ijlrkfkdwh" path="res://assets/explicacao 32.png" id="3_ev2hf"]
[ext_resource type="Texture2D" uid="uid://b520fpjml6888" path="res://assets/continuar.png" id="3_mc6qd"]
[ext_resource type="Texture2D" uid="uid://bmxeirivvp3th" path="res://assets/btn.png" id="3_rot7v"]
[ext_resource type="Texture2D" uid="uid://p4jhd6e5nf76" path="res://assets/recomecar.png" id="4_yavsw"]
[ext_resource type="AudioStream" uid="uid://dlfim2ja4ogdy" path="res://assets/audios/Som-de-clique-de-mouse-Efeito-Sonoro.ogg" id="5_67x5q"]
[ext_resource type="Texture2D" uid="uid://cbx21x5lk1f2n" path="res://assets/explicacao.png" id="6_i87bx"]
[ext_resource type="Texture2D" uid="uid://twjen3dx846u" path="res://assets/seta2.png" id="8_i87bx"]

[node name="Fase32" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ev2hf")
metadata/_edit_horizontal_guides_ = [-120.0]

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i87bx")

[node name="explicacao_inicial_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="explicacao" type="TextureRect" parent="explicacao_inicial_container"]
layout_mode = 0
offset_left = 168.0
offset_top = 192.0
offset_right = 978.0
offset_bottom = 402.0
texture = ExtResource("3_ev2hf")

[node name="TextureRect" type="TextureRect" parent="explicacao_inicial_container/explicacao"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="button_continuar" type="TextureButton" parent="explicacao_inicial_container"]
layout_mode = 0
offset_left = 442.0
offset_top = 488.0
offset_right = 700.0
offset_bottom = 558.0
texture_normal = ExtResource("3_rot7v")

[node name="TextureRect" type="TextureRect" parent="explicacao_inicial_container/button_continuar"]
layout_mode = 0
offset_left = 41.0
offset_top = 6.0
offset_right = 211.0
offset_bottom = 46.0
texture = ExtResource("3_mc6qd")

[node name="texto_label" type="TextureRect" parent="explicacao_inicial_container"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 288.0
offset_bottom = 86.0
texture = ExtResource("3_rot7v")

[node name="TextureRect" type="TextureRect" parent="explicacao_inicial_container/texto_label"]
layout_mode = 0
offset_left = 19.0
offset_top = 7.0
offset_right = 252.0
offset_bottom = 52.0
texture = ExtResource("6_i87bx")

[node name="fase1_label" type="Label" parent="explicacao_inicial_container"]
layout_mode = 0
offset_left = 168.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 63.0

[node name="explicacao_etapa_container" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 72.0

[node name="button_iniciar" type="TextureButton" parent="explicacao_etapa_container"]
layout_mode = 0
offset_left = 321.0
offset_top = 456.0
offset_right = 579.0
offset_bottom = 526.0
texture_normal = ExtResource("3_rot7v")

[node name="TextureRect" type="TextureRect" parent="explicacao_etapa_container/button_iniciar"]
layout_mode = 0
offset_left = 41.0
offset_top = 5.0
offset_right = 211.0
offset_bottom = 45.0
texture = ExtResource("3_mc6qd")

[node name="fase1_label" type="Label" parent="explicacao_etapa_container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="titulo_label" type="Label" parent="explicacao_etapa_container"]
layout_mode = 0
offset_left = -56.0
offset_top = 64.0
offset_right = -16.0
offset_bottom = 87.0

[node name="imagem_explicacao" type="TextureRect" parent="explicacao_etapa_container"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 48.0
offset_bottom = 55.0

[node name="exercicio_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="tipo_energia_img" type="TextureRect" parent="exercicio_container"]
layout_mode = 0
offset_left = 296.0
offset_top = 40.0
offset_right = 336.0
offset_bottom = 80.0

[node name="itens_container" type="Control" parent="exercicio_container"]
anchors_preset = 0
offset_left = 32.0
offset_top = 96.0
offset_right = 72.0
offset_bottom = 120.0

[node name="item_1" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 0
offset_left = 96.0
offset_top = 320.0
offset_right = 136.0
offset_bottom = 343.0

[node name="item_2" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 0
offset_left = 488.0
offset_top = 296.0
offset_right = 528.0
offset_bottom = 319.0

[node name="item_3" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 0
offset_left = 936.0
offset_top = 304.0
offset_right = 976.0
offset_bottom = 327.0

[node name="feedback_label" type="Label" parent="exercicio_container"]
layout_mode = 0
offset_left = 552.0
offset_top = 192.0
offset_right = 592.0
offset_bottom = 215.0

[node name="button_restart" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 838.0
offset_top = 97.0
offset_right = 1096.0
offset_bottom = 167.0
texture_normal = ExtResource("4_yavsw")

[node name="button_continuar" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 839.0
offset_top = 96.0
offset_right = 1097.0
offset_bottom = 166.0
texture_normal = ExtResource("3_rot7v")

[node name="TextureRect" type="TextureRect" parent="exercicio_container/button_continuar"]
layout_mode = 0
offset_left = 44.0
offset_top = 8.0
offset_right = 214.0
offset_bottom = 48.0
texture = ExtResource("3_mc6qd")

[node name="seta_1" type="TextureRect" parent="exercicio_container"]
visible = false
layout_mode = 0
offset_left = -226.0
offset_top = 187.0
offset_right = 854.0
offset_bottom = 794.0
texture = ExtResource("8_i87bx")

[node name="seta_2" type="TextureRect" parent="exercicio_container"]
visible = false
layout_mode = 0
offset_left = 235.0
offset_top = 182.0
offset_right = 1315.0
offset_bottom = 789.0
texture = ExtResource("8_i87bx")

[node name="label_vitoria" type="Label" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 184.0
offset_right = 520.0
offset_bottom = 207.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_67x5q")
